src/test/deca/syntax/invalid/custom/unknown_type.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : type inconnu 'myType'

myType x = new myType();
